# photos.kennethreitz.org

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  architecture.md  docker-compose.yml  fly.toml  manage.py  pyproject.toml
.github/workflows/: deploy.yml
core/: admin.py  context_processors.py  middleware.py  models.py  views.py
core/management/commands/: ai_describe.py  cleanup.py  dedupe.py  geocode.py  import_flickr.py
core/migrations/: 0001_initial.py  0002_image_content_hash.py  0006_add_analytics_code.py
core/templates/registration/: login.html  register.html
exiftree/: api.py  asgi.py  settings.py  urls.py  wsgi.py
gallery/: models.py  views.py
gallery/migrations/: 0001_initial.py
gallery/templates/gallery/: collection_detail.html  profile.html
groups/: models.py
groups/migrations/: 0001_initial.py
groups/templates/groups/: group_detail.html
ingest/: pipeline.py  tasks.py  urls.py  views.py
ingest/templates/ingest/: upload.html
search/templates/search/: search.html
static/css/: style.css
templates/: base.html  embed.html  home.html  image_detail.html  robots.txt  users.html
templates/includes/: gear_keynav.html  grid_keynav.html  image_grid_page.html  image_overlay.html
tree/: urls.py  views.py
tree/templates/tree/: camera_detail.html  camera_list.html  city_detail.html  city_list.html  lens_detail.html  lens_list.html  tag_cloud.html  tag_detail.html
